# flexfs

./: CMakeLists.txt  LICENSE  README.md
cmake/: buildvars.cmake  deps.cmake  functions.cmake  gtest.cmake  paths.cmake
cpack/: CMakeLists.txt
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/example_logger/: CMakeLists.txt  example_logger.cpp  example_logger.h  main.cpp
src/flexfs/: CMakeLists.txt  attributes.cpp  attributes.h  config.h.in  destination.cpp  destination.h  direntry.cpp  direntry.h  exceptions.cpp  exceptions.h  formatters.h  i_access.cpp  i_access.h  i_file.h  i_interruptor.cpp  i_interruptor.h  i_logger.cpp  i_logger.h  i_watcher.h  log_level.h  logging.cpp  logging.h  operations.cpp  operations.h  source.cpp  source.h  spdlog_logger.cpp  spdlog_logger.h  uuid.cpp  uuid.h  version.cpp  version.h.in
src/flexfs/core/: CMakeLists.txt  api.h  attributes.cpp  attributes.h  destination.cpp  destination.h  direntry.cpp  direntry.h  exceptions.cpp  exceptions.h  fspath.h  i_access.cpp  i_access.h  i_file.cpp  i_file.h  i_interruptor.cpp  i_interruptor.h  i_logger.cpp  i_logger.h  i_watcher.cpp  i_watcher.h  logging.cpp  logging.h  make_dest_path.cpp  make_dest_path.h  noop_interruptor.cpp  noop_interruptor.h  operations.cpp  operations.h  source.cpp  source.h  spdlog_logger.cpp  spdlog_logger.h  uuid.cpp  version.cpp  version.h.in
src/flexfs/core/test/unit/: mock_access.cpp  mock_access.h  mock_file.cpp  mock_file.h  test_attributes.cpp  test_destination.cpp  test_exceptions.cpp  test_i_interruptor.cpp  test_make_dest_path.cpp  test_operations.cpp  test_source.cpp
src/flexfs/local/: CMakeLists.txt  local_access.cpp  local_access.h  local_file.cpp  local_file.h  local_watcher.cpp  local_watcher.h  make_attributes.cpp  make_attributes.h  make_direntry.cpp  make_direntry.h
src/flexfs/local/test/unit/: local_fs_test_fixture.cpp  local_fs_test_fixture.h  test_local_access.cpp  test_make_attributes.cpp  test_make_direntry.cpp
src/flexfs/sftp/: CMakeLists.txt  i_ssh_api.cpp  i_ssh_api.h  i_ssh_identity_factory.cpp  i_ssh_identity_factory.h  i_ssh_knownhosts.cpp  i_ssh_knownhosts.h  ptr_types.h  sftp_access.cpp  sftp_access.h  sftp_exceptions.cpp  sftp_exceptions.h  sftp_file.cpp  sftp_file.h  sftp_options.h  sftp_session.cpp  sftp_session.h  sftp_watcher.cpp  sftp_watcher.h  ssh_api.cpp  ssh_api.h  ssh_connection.cpp  ssh_connection.h  ssh_identity.h  ssh_private_key.cpp  ssh_private_key.h  ssh_pubkey_hash.cpp  ssh_pubkey_hash.h  ssh_public_key.cpp  ssh_public_key.h  ssh_server_pubkey.cpp  ssh_server_pubkey.h
